[workspace]
members = [
    "bin/*",
    "crates/*",
]
default-members = ["bin/chronicle"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/developeruche/chronicle"

[workspace.dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync"] }
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
async-trait = "0.1.73"
futures = "0.3.28"
futures-util = "0.3.28"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "188c4f8", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "rpc-client",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-wallet",
    "signer-yubihsm",
    "pubsub"
] }
futures-core = "0.3.30"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
