[package]
name = "chronicle-tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
alloy.workspace = true
postgres.workspace = true



tokio-util = "0.7.8"
chronicle-primitives = { path = "../../crates/primitives" }
chronicle-server = { path = "../../crates/server" }
chronicle-indexer = { path = "../../crates/indexer" }
